            with a message asking if you want to create that node, rather than
            a blank page.
          * New "summary" metadata field for one-line summaries of nodes:
            - Add summary field to RDF as dc:description.
            - Show node summary in search results.
          * New "format=raw" option for outputting wiki text of a node. 
        
        RDF bugfixes:
          * Locales, address and summary fields now XML-escaped properly.
            (Requirement on CGI::Wiki::Plugin::RSS::ModWiki bumped to 0.073 for
            associated fix escaping node names in RSS feed.)
          * Add "address" field that was missing from the RDF node view.
          * Update URL for Dublin Core elements in RDF index view.
        
        Search bugfixes:
          * Fix bug that was breaking coordinate entry fields on search page if 
            lat/lon was being used.
          * Fix bug in OpenGuides::SuperSearch that wasn't passing "latitude" and
            "longitude" values to the search template when a distance search
            was being done.
        
        Minor improvements:
          * Replace underscores in node names in "redirected from" message with spaces.
          * "Redirected from" message now links to a rendered version of the old page
            rather than the editing view.
        
0.50    2 October 2005
        Remove rogue ampersand that had crept into the RSS feed.
        
0.49    24 July 2005
        Add updated prerequisite on CGI::Wiki::Plugin::RSS::ModWiki (fixes
        a test failure)

0.48    24 July 2005
        RDF enhancements:
          * Removed redundant "id" parameter specification from dc:source in
            rdf:Description in RDF node listings.
          * Fixed bug that was causing all nodes to be flagged as a
            geo:SpatialThing whether they were or not.
          * Ensured that ampersands and greater/less than symbols were properly 
            escaped so as not to be XML-toxic.